update edpoint untuk pelanggan
